--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Recetify"
         android:usesCleartextTraffic="true"
+        android:name=".App"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
